<resources>
    <string name="app_name">Corona</string>
    <string name="search">Search</string>
    <string name="country">Country</string>
    <string name="cases">Cases</string>
    <string name="today_cases">Today Cases</string>
    <string name="deaths">Deaths</string>
    <string name="today_deaths">Today Deaths</string>
    <string name="recovered">Recovered</string>
    <string name="_0">0</string>
    <string name="active_cases">Active cases</string>
    <string name="affected_countries">Affected Countries</string>
    <string name="today_s_deaths">Today\'s Deaths</string>
    <string name="search_country">Search Country</string>
    <string name="total_deaths">Total Deaths</string>
    <string name="today_s_cases">Today\'s Cases</string>
    <string name="critical_cases">Critical cases</string>
    <string name="total_cases">Total Cases</string>
    <string name="world_today">Corona today</string>
</resources>
