<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    tools:context=".MainActivity">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:orientation="vertical">


<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="@dimen/margin_25"-->
<!--            android:layout_marginTop="@dimen/margin_20"-->
<!--            android:gravity="center_horizontal"-->
<!--            android:text="@string/world_today"-->
<!--            android:textAllCaps="true"-->
<!--            android:textSize="28sp"-->
<!--            android:textStyle="bold" />-->


        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewGraph"
            android:layout_width="match_parent"
            android:background="@mipmap/ic_launcher_foreground"
            android:layout_height="280dp"
            android:layout_margin="@dimen/margin_15"
            app:cardCornerRadius="@dimen/margin_5"
            app:cardElevation="@dimen/padding_10">


            <com.leo.simplearcloader.SimpleArcLoader
                android:id="@+id/loader"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:visibility="visible"
                app:arc_style="complete_arc" />

            <org.eazegraph.lib.charts.PieChart
                android:id="@+id/piechart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/splash_background"
                android:padding="6dp"
                app:egInnerValueColor="@android:color/black"
                app:egLegendTextSize="@dimen/text_18"
                app:egShowDecimal="true" />


        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_15"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <View
                        android:layout_width="@dimen/margin_15"
                        android:layout_height="match_parent"
                        android:background="@color/cases" />

                    <TextView
                        android:layout_width="150dp"
                        android:gravity="start"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/padding_10"
                        android:paddingEnd="@dimen/padding_10"
                        android:text="@string/total_cases"
                        android:textSize="@dimen/text_18" />

                </LinearLayout>

                <TextView
                    android:id="@+id/tvCases"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:paddingStart="@dimen/margin_5"
                    android:paddingEnd="@dimen/margin_5"
                    android:text="@string/_0"
                    android:textColor="@color/cases"
                    android:textSize="@dimen/text_18"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <View
                        android:layout_width="@dimen/margin_15"
                        android:layout_height="match_parent"
                        android:background="@color/active" />

                    <TextView
                        android:layout_width="150dp"
                        android:gravity="start"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/padding_10"
                        android:paddingEnd="@dimen/padding_10"
                        android:text="@string/active_cases"
                        android:textSize="@dimen/text_18" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvActive"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:paddingStart="@dimen/padding_10"
                    android:paddingEnd="@dimen/padding_10"
                    android:text="@string/_0"
                    android:textColor="@color/active"
                    android:textSize="@dimen/text_18"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/margin_5">

                <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <View
                        android:layout_width="@dimen/margin_15"
                        android:layout_height="match_parent"
                        android:background="@color/recovered" />

                    <TextView
                        android:layout_width="150dp"
                        android:gravity="start"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingStart="@dimen/padding_10"
                        android:paddingEnd="@dimen/padding_10"
                        android:text="@string/recovered"
                        android:textSize="@dimen/text_18" />
                </LinearLayout>

                    <TextView
                        android:id="@+id/tvRecovered"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:fontFamily="sans-serif-light"
                        android:gravity="center"
                        android:paddingStart="@dimen/padding_10"
                        android:paddingEnd="@dimen/padding_10"
                        android:text="@string/_0"
                        android:textColor="@color/recovered"
                        android:textSize="@dimen/text_18"
                        android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/margin_5">

                <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <View
                    android:layout_width="@dimen/margin_15"
                    android:layout_height="match_parent"
                    android:background="@color/deaths" />

                <TextView
                    android:layout_width="150dp"
                    android:gravity="start"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/padding_10"
                    android:paddingEnd="@dimen/padding_10"
                    android:text="@string/deaths"
                    android:textSize="@dimen/text_18" />

                </LinearLayout>
                <TextView
                    android:id="@+id/tvTotalDeaths"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:paddingStart="@dimen/padding_10"
                    android:paddingEnd="@dimen/padding_10"
                    android:text="@string/_0"
                    android:textColor="@color/deaths"
                    android:textSize="@dimen/text_18"
                    android:textStyle="bold" />

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/margin_5">

                <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <View
                        android:layout_width="25dp"
                        android:layout_height="@dimen/margin_25"
                        android:background="@drawable/ic_public_black_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:gravity="start"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/holo_blue_dark"
                        android:paddingStart="@dimen/padding_10"
                        android:paddingEnd="@dimen/padding_10"
                        android:textStyle="bold"
                        android:text="@string/affected_countries"
                        android:textSize="@dimen/text_18" />

                </LinearLayout>
                <TextView
                    android:id="@+id/tvAffectedCountries"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:paddingStart="@dimen/padding_10"
                    android:paddingEnd="@dimen/padding_10"
                    android:text="@string/_0"
                    android:textColor="@android:color/holo_blue_bright"
                    android:textSize="@dimen/text_18"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>



        <Button
            android:id="@+id/btnTrack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_20"
            android:background="@color/cases"
            android:onClick="goTrackCountries"
            style="@style/Widget.AppCompat.ActionButton"
            android:padding="@dimen/margin_5"
            android:text="@string/search_country"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_18" />



    </LinearLayout>
</ScrollView>